# multi-ai-desktop-

./: .gitignore  Dockerfile  IMPROVEMENTS.md  OCR_SYSTEM_IMPROVEMENTS.md  PACKAGING_GUIDE.md  PACKAGING_NOTES.md  Package.appxmanifest  README-DOCKER.md  README.md  build_macos.sh  build_store.ps1  build_windows.ps1  check_dependencies.ps1  docker-compose.yml  docker-start.ps1  list_qwebenginepage_signals.py  multi_ai_desktop.spec  pyproject.toml  rebuild.ps1  requirements.txt  requirements_packaging.txt  setup_macos.py  test_ocr.py  validate_build.py
app/: __main__.py
app/js/: input_listener.js  multi_selector_listener.js  set_external_text.js
app/panes/: base_pane.py  chatgpt.py  claude_pane.py  gemini.py  grok.py
app/tests/: test_ocr.py
app/utils/: error_recovery.py  js_loader.py  logging_config.py  ocr_utils.py
app/widgets/: __init__.py  ocr_control.py  prompt_input.py
docker/: start.sh  supervisord.conf
hooks/: rthook.py
