[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-ai-desktop"
version = "0.1.0"
description = "A desktop application for interacting with multiple AI models"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "PySide6>=6.5.0",
    "python-dotenv>=1.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["app"] 